# vec-utilities

./: Cargo.toml  README.md  license
src/: filters.rs  generation.rs  lib.rs
src/maths/: mod.rs  nan_stats.rs  stats.rs
src/running/: mod.rs
src/tests/: stats.rs
tests/: generation.rs  nan_stats.rs  running.rs  stats.rs
