[package]
name = "vec-utilities"
version = "0.0.2"
edition = "2021"
authors = [
    "Indigo Curnick <indigocurnick@gmail.com>, Andrew Bowell <andrewbowell@mail.com>",
]
description = "A collection of methods that make working with Vecs of floats easier"
readme = "README.md"
repository = "https://github.com/IndigoCurnick/vec-utilities"
license = "MIT"
keywords = ["math", "utility"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2"

[dev-dependencies]
approx_eq = "0.1.8"
